[package]
name = "week1"
version = "0.1.1"
edition = "2021"
authors = ["v1xingyue <qixingyue@gmail.com>"]
description = "A short description of my package"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/v1xingyue/myrust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
ansi_term = "0.12.1"

