[package]
name = "week1"
version = "0.1.5"
edition = "2021"
authors = ["v1xingyue <qixingyue@gmail.com>"]
description = "A short description of my package"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/v1xingyue/myrust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ansi_term = "0.12.1"
rand = "0.7"
ed25519-dalek = "1"
rand_core = { version = "0.5" }
hex = "0.4.3"
blake2b_simd = "1.0.1"

