[package]
name = "week2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ansi_term = "0.12.1"
rand = "0.7"
ed25519-dalek = "1"
rand_core = { version = "0.5" }
hex = "0.4.3"
blake2b_simd = "1.0.1"
base64 = "0.13.0"
week1 = "0.1.8"
reqwest = "0.11.18"
