[package]
name = "week5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.26"
tokio = { version = "1", features = ["full"] }
reqwest = {version="0.11.18",features=["json"]}
serde_json = "1.0.100"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "hello"
path = "src/bin/main.rs"

[[bin]]
name = "hello2"
path = "src/bin/main2.rs"
